kubernetes/yamls/echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: test
