kubernetes/yamls/echoserver/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viber
  namespace: viber
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  # tls:
  # - hosts:
  #   - echo.example.com
  #   secretName: echoserver-tls
  rules:
  - host: susi-viberbbot.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: viber
          servicePort: 80
